# dehset-vpn-legacy

./: Cargo.toml  README.md
client/: Cargo.toml
client/examples/: client.rs
client/src/: client.rs  cmd.rs  error.rs  lib.rs
client/src/connection/: handshake.rs  mod.rs
crypto/: Cargo.toml
crypto/src/: error.rs  lib.rs  symm.rs  testutil.rs  tls.rs
crypto/src/sign/: hs256.rs  mod.rs  tests.rs  token.rs
crypto/src/symm/: aes_128_cbc.rs  aes_128_cbc_sha256.rs  mod.rs  tests.rs
node/: Cargo.toml
proto-core/: Cargo.toml  README.md
proto-core/src/: algorithms.rs  lib.rs  macros.rs  tls_provider.rs  token.rs
proto-core/src/common/: message_queue.rs
proto-core/src/sub_protocol/: alert.rs  application_data.rs  cmd.rs  cmd_response.rs  event.rs  handshake.rs  mod.rs
proto-core/src/sub_protocol2/: handshake.rs  mod.rs
proto-core/src/token/: error.rs  mod.rs
proto-core/src/tunnel/: error.rs  message_queue.rs  mod.rs
server/: Cargo.toml
server/examples/: minimal-server.rs  server.rs
server/src/: error.rs  handle_socket.rs  handshake.rs  lib.rs  server.rs
server/src/connection/: handshake.rs  mod.rs
testutil/: Cargo.toml
testutil/src/: lib.rs
testutil/tests/: handshake.rs
