[workspace]
members = [
    "server",
    "node",
    "proto-core",
    "crypto",
]
default-members = [
    "server",
    "node",
    "proto-core",
    "crypto",
]
resolver = "2"


[workspace.dependencies]
tokio = "1"
tracing = "0.1"

serde = { version = "1", features = ["derive"] }

openssl = { version = "0.10", features = ["vendored"] }

paste = "1"


[workspace.lints.clippy]
all = "warn"
style = "warn"
unused_self = "warn"
if_let_mutex = "warn"
