[workspace]
members = [
    "server",
    "client",
    "proto-core",
    "crypto",
]
default-members = [
    "server",
    "client",
    "proto-core",
    "crypto",
]
resolver = "2"


[workspace.dependencies]
tokio = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
paste = "1.0"
rand = "0.9"
hex = "0.4"


[workspace.lints.clippy]
all = "warn"
style = "warn"
unused_self = "warn"
if_let_mutex = "warn"
