[package]
name = "client"
version = "0.0.0"
edition = "2024"

[dependencies]
proto-core = { path = "../proto-core/" }
crypto = { path = "../crypto/" }
tokio = { workspace = true, features = ["net", "io-util"] }
tracing = { workspace = true }
paste = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "io-util", "rt-multi-thread", "macros"] }
server = { path = "../server/" }
testutil = { path = "../testutil//" }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
