[package]
name = "crypto"
version = "0.0.0"
edition = "2024"

[dependencies]
proto-core = { path = "../proto-core/" }
openssl = { workspace = true }
paste = { workspace = true }

[dev-dependencies]
testutil = { path = "../testutil/" }
rand = { workspace = true, features = ["os_rng"] }
hex = { workspace = true }

[lints]
workspace = true
