[package]
name = "proto-core"
version = "0.0.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
bincode = { workspace = true }
paste = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
testutil = { path = "../testutil/" }

[lints]
workspace = true
