[package]
name = "server"
version = "0.0.0"
edition = "2024"

[dependencies]
proto-core = { path = "../proto-core/" }
crypto = { path = "../crypto/" }
tokio = { workspace = true, features = ["net", "sync"] }
paste = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
