[package]
name = "server"
version = "0.0.0"
edition = "2024"

[dependencies]
proto-core = { path = "../proto-core/" }
crypto = { path = "../crypto/" }
tokio = { workspace = true, features = ["net", "sync"] }
tracing = { workspace = true }
paste = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
